# tapl

./: .gitignore  README.md
arith/: arith.cabal  arith.hs
